Refactor: Consolidate shop ID logic and links for sales and customers
This commit refactors the way shop IDs and links are handled for both sales and customers, creating a more unified and maintainable approach. It introduces a `shop_id` method to both the `Sale` and `Customer` models, which returns either the Shopify ID or the WooCommerce ID. It also introduces a `SaleHelper` module to encapsulate link generation logic.

The following changes were made:

- Added a `shop_id` method to the `Sale` model that returns either the `shopify_id_short` or `woo_id`.
- Added a `shop_id` and `shopify_id_short` method to the `Customer` model.
- Created a `SaleHelper` module with `format_sale_status`, `sale_shop_link`, and `customer_shop_link` methods to handle link generation and status formatting.
- Removed the `format_sale_status` helper from `ApplicationHelper` and moved it to `SaleHelper`.
- Updated `app/views/sales/show.html.slim` to use the `shop_id` method and `sale_shop_link` helper for generating links to Shopify and WooCommerce orders.
- Updated `app/views/sales/_sale_attributes.html.slim` to use the `shop_id` method and `customer_shop_link` helper for generating links to Shopify and WooCommerce customer profiles.
- Updated `app/views/sales/_sale_attributes.html.slim` to rename "Woo Created/Updated" to "Shop Created/Updated"

--- a/app/views/sales/_sale_attributes.html.slim
+++ b/app/views/sales/_sale_attributes.html.slim
@@ -8,11 +8,9 @@
     p = safe_blank_render sale.customer.email
     .title Note
     p = safe_blank_render sale.note
-    .title Customer Woo ID
-    - if sale.customer.woo_id.present?
-      p = link_to sale.customer.woo_id, "https://store.handsomecake.com/wp-admin/user-edit.php?user_id=#{sale.customer.woo_id}"
-    - else
-      p = safe_blank_render sale.customer.woo_id
+    - if sale.customer.shop_id.present?
+      .title Customer Shop ID
+      p = link_to sale.customer.shop_id, customer_shop_link(sale.customer)
 
   .card
     .title Total, $
@@ -25,12 +23,10 @@
   .card
     .title ID
     p = sale.id
-    .title Woo Created
-    p = safe_blank_render format_date(sale.woo_created_at)
-    .title Woo Upd.
-    p = safe_blank_render format_date(sale.woo_updated_at)  
-    .title Order Woo ID
-    - if sale.woo_id.present?
-      p = link_to sale.woo_id, "https://store.handsomecake.com/wp-admin/post.php?post=#{sale.woo_id}&action=edit"
-    - else
-      p = safe_blank_render sale.woo_id
+    .title Shop Created
+    p = safe_blank_render format_date(sale.shop_created_at)
+    .title Shop Updated
+    p = safe_blank_render format_date(sale.shop_updated_at)  
+    - if sale.shop_id.present?
+      .title Order Shop ID
+      p = link_to sale.shop_id, sale_shop_link(sale)
