--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -3,10 +3,10 @@ tr.hoverable id="#{dom_id product}" data-action="click->table#goTo" data-table-u
     = render "_shared/preloadable_img", src: thumb_url(product), class_names: "zoomable", width: 100
   td
     = product.full_title
-    - if product.variations.present?
-      ul.product-variations
-        - product.variations.each do |variation|
-          li = variation.title
+    - if product.editions.present?
+      ul.product-editions
+        - product.editions.each do |edition|
+          li = edition.title
   td = product.woo_id
   td = product.shopify_id_short
   td.actions
