--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -19,7 +19,7 @@ nav
 
 main.wide.flex.flex-col.gap.w-pd
   = render "product_attributes", product: @product
-  = render "product_variations", product: @product
+  = render "product_editions", product: @product
   = render "product_active_sales", product: @product,\
     active_sales: @active_sales
   = render "product_complete_sales", product: @product,\
