--- a/app/views/purchases/_form.html.slim
+++ b/app/views/purchases/_form.html.slim
@@ -4,15 +4,15 @@
   = form.label :supplier
   = form.collection_select :supplier_id, Supplier.all.order(title: :asc), :id, :title
 
-  .stimulus data-controller="purchase-variation"
+  .stimulus data-controller="purchase-edition"
     = form.label :product
     .stimulus#purchase-product-select
-      = form.collection_select :product_id, Product.all, :id, :woo_id_full_title, { class: "select" }, data: { controller: "slim-select", action: "change->purchase-variation#change" }
+      = form.collection_select :product_id, Product.all, :id, :woo_id_full_title, { class: "select" }, data: { controller: "slim-select", action: "change->purchase-edition#change" }
 
-    .stimulus#purchase-variation-select data-purchase-variation-target="select"
-      - if purchase.product&.variations.present?
-        = form.label :variation
-        = form.collection_select :variation_id, purchase.product.variations.includes(:size, :color, :version), :id, :title, { class: "select", include_blank: true }, data: { controller: "slim-select" }
+    .stimulus#purchase-edition-select data-purchase-edition-target="select"
+      - if purchase.product&.editions.present?
+        = form.label :edition
+        = form.collection_select :edition_id, purchase.product.editions.includes(:size, :color, :version), :id, :title, { class: "select", include_blank: true }, data: { controller: "slim-select" }
 
   = form.label :order_reference
   = form.text_field :order_reference
