--- a/app/views/sales/_modal_sync_menu.html.slim
+++ b/app/views/sales/_modal_sync_menu.html.slim
@@ -1,3 +1,3 @@
-p = link_to "Sync Last 50", sync_sales_path(limit: 50), class: "btn is-primary xl fw"
-p = link_to "Sync Everything", sync_sales_path, class: "btn xl fw"
+p = link_to "Pull Last 50 Sales", sync_sales_path(limit: 50), class: "btn is-primary xl fw"
+p = link_to "Pull Everything", sync_sales_path, class: "btn xl fw"
 p = link_to "Track Jobs Progress", "/jobs/statuses", class: "btn xl fw"
