Feature: Implement product-specific pull functionality, rename sync action to pull

--- a/app/views/_shared/_nav-index.html.slim
+++ b/app/views/_shared/_nav-index.html.slim
@@ -10,7 +10,7 @@ nav
         li data-controller="modal-trigger"
           = link_to "#sync",
             data: { action: "click->modal-trigger#open" }
-            i.icn 🛒
+            i.icn 📥
             | Sync
       li
         = link_to controller: "#{model.model_name.plural}", action: "new"
