--- a/app/views/products/_modal_sync_menu.html.slim
+++ b/app/views/products/_modal_sync_menu.html.slim
@@ -1,3 +1,3 @@
-p = link_to "Pull Last 50 Products", sync_products_path(limit: 50), class: "btn is-primary xl fw"
-p = link_to "Pull Everything", sync_products_path, class: "btn xl fw"
+p = link_to "Pull Last 50 Products", pull_products_path(limit: 50), class: "btn is-primary xl fw"
+p = link_to "Pull Everything", pull_products_path, class: "btn xl fw"
 p = link_to "Track Jobs Progress", "/jobs/statuses", class: "btn xl fw"
