Refactor: Rename sync action to pull and update related functionality for sales and products

--- a/app/views/sales/show.html.slim
+++ b/app/views/sales/show.html.slim
@@ -14,7 +14,12 @@ nav
         - else
           h1 Sale
         h4 = @sale.title
-  ul
+  ul.gap
+    - if @sale.shopify_id
+      li
+        a.btn href="#{url_for pull_sale_path(sale: @sale)}" 
+          i.icn 📥
+          | Pull
     li = render "_shared/action-edit", route: url_for(controller: "#{@sale.model_name.plural}", action: "edit", id: @sale), btn: true
 
 main.wide.flex.flex-col.gap.w-pd.no-bd
