--- a/app/views/sales/_purchased_products.html.slim
+++ b/app/views/sales/_purchased_products.html.slim
@@ -1,4 +1,4 @@
-ul.product-editions
+ul.v-align.ml-s.list-none
   - purchased_products.each do |purchased_product|
     li
       a.no-events href=purchased_product_path(purchased_product)
