--- a/app/views/products/_product_editions.html.slim
+++ b/app/views/products/_product_editions.html.slim
@@ -6,9 +6,9 @@
         th ID
         th Name
         th Type
-        th.right Sales
+        th.right Active Sales
         th Purchases
-        th Woo ID
+        th Shop ID
       tbody
         - product.editions.each do |edition|
           tr id="#{request.params[:selected]}" class=class_names(selected: request.params[:selected].to_i == edition.id)
@@ -18,6 +18,6 @@
             td.right = format_zero_values @editions_sales_sums[edition.id]
             td = format_zero_values @editions_purchases_sums[edition.id]
             - if edition.store_link.present?
-              td = link_to edition.woo_id, edition.store_link, :target => "_blank", "rel" => "noopener noreferrer"
+              td = link_to edition.shop_id, edition.store_link, :target => "_blank", "rel" => "noopener noreferrer"
             - else 
-              td = edition.woo_id
+              td = edition.shop_id
