Feat: Add shopify_name to sales and display in admin
This commit introduces the `shopify_name` attribute to the `Sale` model and displays it in the admin interface.

The changes include:

- Adding a `shopify_name` column to the `sales` table.
- Updating the `Shopify::SaleParser` to extract the `name` field from the Shopify order and store it as `shopify_name`.
- Displaying the `shopify_name` in the sales index and show views.
- Adding `shopify_name` to the searchable fields in the Sale model.

This change allows administrators to easily identify sales by their Shopify name, which is more user-friendly than the Shopify ID.

--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -14,9 +14,9 @@ main.wide
         tr
           th.text-center Image
           th
-            | Customer
+            <span>Customer</span>
             br
-            | Products
+            <span class="fw-400 pl-s">Products</span>
           th Status
           th.right Price
           th
@@ -24,7 +24,10 @@ main.wide
             br
             | Updated
           th Woo ID
-          th Shopify ID
+          th
+            | Shopify name
+            br
+            <span class="fw-400 mute">Shopify ID</span>
           th.right Actions
       tbody
         = render @sales
