--- a/app/views/sales/_sale.html.slim
+++ b/app/views/sales/_sale.html.slim
@@ -20,7 +20,10 @@ tr.hoverable id="#{dom_id sale}" data-action="click->table#goTo" data-table-url-
     br
     = format_date sale.shop_updated_at.presence || sale.updated_at
   td = sale.woo_id
-  td = sale.shopify_id_short
+  td
+    = sale.shopify_name
+    br
+    .mute = sale.shopify_id_short
   - if action_name != "show" 
     td.actions
       = render "_shared/action-edit", route: edit_sale_path(sale)
