Fix: Update table header for product editions display

--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -13,7 +13,10 @@ main.wide
       thead
         tr
           th Image
-          th Full name
+          th
+            <span>Full name</span>
+            br
+            <span class="fw-400 pl-s">Editions</span>
           th Woo ID
           th Shopify ID
           th Actions
