Feat: Add position field to warehouse form
This commit adds the ability to set the position of a warehouse when creating or editing it.

The following changes were made:

- Added a `position` field to the warehouse form (`_form.html.slim`) using a select tag. The options for the select tag are dynamically generated based on the number of existing warehouses.
- Passed the `positions_count` variable to the `_form.html.slim` partial in both the `new.html.slim` and `edit.html.slim` views.
- Added `position` to the permitted params in `WarehousesController`.
- Calculated `positions_count` in `WarehousesController` `new` and `edit` actions.

--- a/app/views/warehouses/_form.html.slim
+++ b/app/views/warehouses/_form.html.slim
@@ -14,6 +14,9 @@
   = form.label :courier_tracking_url
   = form.text_field :courier_tracking_url
 
+  = form.label :position
+  = form.select :position, options_for_select((1..positions_count).to_a, warehouse.position), {}, class: "form-select"
+
   = form.label :is_default
   = form.select :is_default, options_for_select([["No", "0"], ["Yes", "1"]], warehouse.is_default? ? "1" : "0")
 
