--- a/app/views/warehouses/edit.html.slim
+++ b/app/views/warehouses/edit.html.slim
@@ -1,4 +1,4 @@
 = render "_shared/nav-edit", model: @warehouse
 
 main
-  = render "form", warehouse: @warehouse
+  = render "form", warehouse: @warehouse, positions_count: @positions_count
