--- a/app/views/warehouses/new.html.slim
+++ b/app/views/warehouses/new.html.slim
@@ -1,4 +1,4 @@
 = render "_shared/nav-new", model: @warehouse
 
 main
-  = render "form", warehouse: @warehouse
+  = render "form", warehouse: @warehouse, positions_count: @positions_count
