Fix: Improve warehouse position update and UI
This commit improves the warehouse position update process and enhances the user interface for managing warehouse positions. It streamlines the form submission using Rails' built-in form helpers and adds a feature test to ensure the functionality works as expected.

The following changes were made:

- Replaced manual form creation in `warehouse-position_controller.js` with `event.currentTarget.form.requestSubmit()` for simpler form submission.
- Updated `_position_select.html.slim` to use `form_with` for generating the form, improving security and maintainability.
- Added a feature test `warehouse_position_spec.rb` to verify the warehouse position update functionality using Capybara and JavaScript.
- Modified the warehouse factory to use sequences for name and external name, and added a default trait.
- Updated the existing feature test `change_default_warehouse_spec.rb` to use the default trait for creating the default warehouse.
- Added `@positions_count = Warehouse.count` to the `edit` action in `WarehousesController` to ensure the correct number of positions is available when editing a warehouse.
- Added `data-warehouse-id=warehouse.id` to the warehouse table row in `_warehouse.html.slim` to make it easier to target specific warehouses in tests.

--- a/app/views/warehouses/_position_select.html.slim
+++ b/app/views/warehouses/_position_select.html.slim
@@ -1,5 +1,5 @@
-div data-controller="warehouse-position"
-  = select_tag :position,
-    options_for_select((1..warehouses_count), warehouse.position),
-    data: { warehouse_id: warehouse.id, action: "change->warehouse-position#changePosition"}, 
-    class: "no-events w-fit m-auto"
+= form_with url: change_position_warehouse_path(warehouse), method: :post, data: {controller: "warehouse-position"}, class: "no-events m-auto" do |form|
+  = select_tag :position, 
+    options_for_select((1..warehouses_count).to_a, warehouse.position),
+    data: { action: "change->warehouse-position#changePosition", warehouse_id: warehouse.id },
+    class: "w-fit m-auto"
