Feat: Improve warehouse position select UI
This commit improves the user interface of the warehouse position select element.

The following changes were made:

- Added a `select--light` class to the position select element in `_position_select.html.slim` for improved styling.
- Added CSS rules for the `select--light` class in `misc.css` to style the select element with a light appearance and hover effect.

--- a/app/assets/stylesheets/misc.css
+++ b/app/assets/stylesheets/misc.css
@@ -199,3 +199,12 @@ dialog[open] {
   transform: translateY(0);
   opacity: 1;
 }
+
+.select--light {
+  cursor: pointer;
+  border-color: var(--dropdown-border-color);
+}
+
+.select--light:hover {
+  border-color: var(--form-element-border-color);
+}
