Refactor: Improve product and edition selection for purchases
This commit refactors the product and edition selection process within the purchase creation and editing forms. It aims to improve user experience and data consistency by:

- Modifying the product selection to display the full title along with the shop ID, enhancing product identification.
- Introducing a dynamic edition selection that updates based on the chosen product, providing relevant edition options.
- Moving the editions retrieval logic to a dedicated `product_editions` action in the `PurchasesController`, improving code organization.
- Adding `includes_details` scope to `Edition` and `ProductSale` models to reduce N+1 queries.
- Adding `active`, `completed` and `includes_details` scopes to `ProductSale` model for better querying.
- Adding helper methods to `Product` model to retrieve active and completed product sales, and editions sales/purchases sizes.
- Adding `editions_with_title` method to `Product` model to filter editions with title.
- Refactoring product and edition selection in the purchase form to use the new controller action and model methods.
- Removing the `editions` route from the `products` resource and creating a `product_editions` route in the `purchases` resource.
- Updating the `purchase-edition_controller.js` to fetch editions from the new `product_editions` route.
- Updating search spec to use `full_title_with_shop_id` instead of `woo_id_full_title`.
- Improving product listing and search in the products index action.

--- a/app/views/purchases/_form.html.slim
+++ b/app/views/purchases/_form.html.slim
@@ -7,12 +7,12 @@
   .stimulus data-controller="purchase-edition"
     = form.label :product
     .stimulus#purchase-product-select
-      = form.collection_select :product_id, Product.all, :id, :woo_id_full_title, { class: "select" }, data: { controller: "slim-select", action: "change->purchase-edition#change" }
+      = form.collection_select :product_id, Product.all, :id, :full_title_with_shop_id, { class: "select" }, data: { controller: "slim-select", action: "change->purchase-edition#change" }
 
     .stimulus#purchase-edition-select data-purchase-edition-target="select"
       - if purchase.product&.editions.present?
         = form.label :edition
-        = form.collection_select :edition_id, purchase.product.editions.includes(:size, :color, :version), :id, :title, { class: "select", include_blank: true }, data: { controller: "slim-select" }
+        = form.collection_select :edition_id, purchase.product.editions_with_title, :id, :title, { class: "select", include_blank: true }, data: { controller: "slim-select" }
 
   = form.label :order_reference
   = form.text_field :order_reference
